# TuxArena

./: .env  CMakeLists.txt  GEMINI.md  MAP_CREATION.md  README.md  build_tuxarena.sh  imgui.ini  migrate_to_sdl2.sh  start_project.sh
cmake/: test_sdl3.cmake
cmake/test_files/: CMakeLists.txt  test_sdl3net.cpp
docs/: architecture.md
include/: tuxarena_imgui_config.h
include/TuxArena/: AssetManager.h  CharacterInfo.h  CharacterManager.h  Constants.h  Entity.h  EntityManager.h  Game.h  InputManager.h  Log.h  Map.h  MapManager.h  ModManager.h  Network.h  NetworkClient.h  NetworkServer.h  Particle.h  ParticleManager.h  Player.h  ProjectileBullet.h  Renderer.h  UI.h  UIManager.h  Weapon.h  WeaponManager.h
maps/: arena1.tmx
mods/example_mod/characters/tux/: character.json
mods/example_mod/weapons/: pistol.json  shotgun.json
src/: AssetManager.cpp  CharacterManager.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  InputManager.cpp  Map.cpp  MapManager.cpp  ModManager.cpp  NetworkClient.cpp  NetworkServer.cpp  ParticleManager.cpp  Player.cpp  ProjectileBullet.cpp  Renderer.cpp  UI.cpp  UIManager.cpp  Weapon.cpp  WeaponManager.cpp  main.cpp  pch.h
